--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -20,7 +20,7 @@
                         {% if prof_pic %}
                             <img src="{{MEDIA_URL}}{{prof_pic.if_file.original.relurl}}" >
                         {% else %}
-                            <img style="background-color:#915A2F" src="/static/ndf/bower_components/foundation-icon-fonts/svgs/fi-torso.svg" >
+                            <img style="background-color:#d18425" src="/static/ndf/bower_components/foundation-icon-fonts/svgs/fi-torso.svg" >
                         {% endif %}
                 </div>
                 <div class="banner_heading">
