--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -7,7 +7,7 @@
             <input type="hidden" name="_id" value="{{node_obj.pk}}">
 
             <!-- name -->
-            <div class="">
+            <div>
                 <div class="left">
                 <h5>Name</h5>
                 <div class="gray-text">{{source_obj.name}}</div>
@@ -20,7 +20,7 @@
 
 
             <!-- content -->
-            <div class="">
+            <div>
                 <div class="left">
                 <h5>Description</h5>
                 {{source_obj.content|safe}}
@@ -30,6 +30,9 @@
                 </div>
             </div>
             <hr/>
+            {% for k, v in additional_form_fields.iteritems %}
+                <{{v.widget}} type="{{v.widget_attr}}" name="{{v.name}}" value="{{v.value}}">
+            {% endfor %}
             {% for k, v in additional_form_fields.attribute.iteritems %}
                 <div class="course_creator_header">
                     <div class="left course_heading">
