added contions for announced unit

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_photo_upload.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_photo_upload.html
@@ -1,5 +1,6 @@
 {% load ndf_tags %}
 {% load i18n %}
+{% get_group_object groupid as group_object %}
 
     <div id="upload_picModal" class="processing-screen reveal-modal medium  radius" data-reveal data-alert>
         <div id="upload_picModalLabel" class="processing-screen-label"></div>
@@ -9,17 +10,22 @@
         <div class="div-height">
           {% get_relation_value node.pk 'has_thumbnail' as grel_dict %}
           {% get_relation_value node.pk 'has_logo' as grel_dict_logo %}
+          {% get_relation_value node.pk 'has_banner_pic' as grel_banner %}
           {% if prof_pic_obj %}
             <img src="{{MEDIA_URL}}{{prof_pic_obj.if_file.original.relurl}}" class="img-height"/>
           {% elif grel_dict %}
             <img src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.thumbnail.relurl}}" class="img-height"/>
           {% elif grel_dict_logo %}
             <img src="{{MEDIA_URL}}{{grel_dict_logo.grel_node.if_file.thumbnail.relurl}}" class="img-height"/>
+            {% elif grel_banner %}
+            <img src="{{MEDIA_URL}}{{grel_banner.grel_node.if_file.mid.relurl}}" class="img-height"/>
           {% else %}
               {% if "Author" in group_object.member_of_names_list %}
                   <i class="fi-torso style2 text-center"></i>
               {% elif node.if_file.mid.relurl %}
                    <img src="{{MEDIA_URL}}{{node.if_file.mid.relurl}}" alt="Profile picture for this group." class="img-height">
+              {% elif "announced_unit" in  group_object.member_of_names_list %}
+                    <img src="/static/ndf/images/maths-cover.png" alt="Profile picture for this group." class="img-height">
               {% else %}
                     <img src="/static/ndf/css/themes/{{site.SITE_NAME|lower}}/images/default-bg.png" alt="Profile picture for this group." class="img-height">
               {% endif %}
@@ -69,6 +75,8 @@
                           <input type="hidden" name="pic_rt" value="is_banner"></input>
                         {% elif  is_profile and not is_banner %}
                           <input type="hidden" name="pic_rt" value="is_profile"></input>
+                        {% elif is_banner  %}
+                          <input type="hidden" name="pic_rt" value="is_banner"></input>
                         {% elif  is_thumbnail and not is_banner or is_profile %}
                           <input type="hidden" name="pic_rt" value="is_thumbnail"></input>
                           <input type="hidden" name="node_id" value="{{node_id}}"></input>
