--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -42,6 +42,7 @@
                       {{ user.username }}
                     {% else %}
                             <img class="profile-img" style="background-color:#d18425;" src="/static/ndf/bower_components/foundation-icon-fonts/svgs/fi-torso.svg" >
+                            {{ user.username }}
                     {% endif %}
                     </a>
                     <ul class="dropdown">
